# Anna

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml
android/: AndroidManifest.xml
src/: mobile_voice_enhanced.py
src/animations/: dashboard.py  splash_screen.py  wave_animation.py
src/api/: translator.py
src/models/: ar_vision.py  system_monitor.py
src/utils/: theme.py
