[project]
name = "anna_mobile"
version = "0.4.0"
description = "Adaptive Nöro Network Asistanı Mobil"
requires-python = ">=3.11"
authors = [
    { name = "westabdu", email = "westabdu@users.noreply.github.com" }
]
dependencies = [
    "flet==0.26.0",
    "SpeechRecognition",
    "gTTS",
    "edge-tts",
    "pygame",
    "pvporcupine",
    "sounddevice",
    "soundfile",
    "google-generativeai",
    "groq",
    "pillow",
    "python-dotenv",
    "requests",
    "psutil",
    "googletrans"
]

[tool.flet]
org = "com.anna"
product = "A.N.N.A"
company = "ANNA"
copyright = "Copyright (C) 2026 by ANNA"

[tool.flet.app]
path = "."
module = "main"

[tool.flet.android]
permissions = [
    "CAMERA",
    "RECORD_AUDIO",
    "INTERNET",
    "READ_EXTERNAL_STORAGE",
    "WRITE_EXTERNAL_STORAGE",
    "VIBRATE",
    "WAKE_LOCK"
]
min_sdk_version = 21
target_sdk_version = 33
ndk_version = "25.1.8937393"

[tool.flet.android.packaging_options]
doNotStrip = "**/*.so"
pickFirsts = ["**/*.so"]